--- a/publications.html
+++ b/publications.html
@@ -101,6 +101,42 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
+							<h3>Measuring AI Fairness in a Continuum Maintaining Nuances: A Robustness Case Study.</h3>
+							<ul class="blog-meta">K. Paxton, 
+											<li>
+									<i class="fa fa-user"></i><a href="index.html#team">K. Aslansefat</a>, D. Thakker and Y. Papadopoulos
+								</li>
+								<li>	
+								<a href="https://www.computer.org/csdl/magazine/ic/5555/01/10658987/1ZOa5NhWSEo"><i class="fa fa-link"></i></a>Link</li>								
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+As machine learning is increasingly making decisions about hiring or healthcare, we want AI to treat ethnic and socioeconomic groups fairly. Fairness is currently measured by comparing the average accuracy of reasoning across groups. We argue that improved measurement is possible on a continuum and without averaging, with the advantage that nuances could be observed within groups. Through the example of skin cancer diagnosis, we illustrate a new statistical method that works on multidimensional data and treats fairness in a continuum. We outline this new approach and focus on its robustness against three types of adversarial attacks. Indeed, such attacks can influence data in ways that may cause different levels of misdiagnosis for different skin tones, thereby distorting fairness. Our results reveal nuances that would not be evident in a strictly categorical approach.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2024 IEEE Internet Computing</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>								
+							</div>
+						</div>
+						<!-- blog tags -->
+
+
+					<!-- publication entry -->
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
 							<h3>Safety Monitoring for Large Language Models: A Case Study of Offshore Wind Maintenance .</h3>
 							<ul class="blog-meta">
 											<li> C. Walker, 
