--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ Data science, IoT, speech processing.<br><br>
 					<div class="circular--portrait"> <img src="img/joyjit.jpeg" /> </div>					
 					</br>
 						<h4>Dr Joyjit Chatterjee</h4>
-						<h4>Researcher & Data Scientist at Reckitt</h4>						
+						<h4>Data Scientist at Reckitt, Visiting Academic</h4>						
 Artificial intelligence, wind turbines, green energy, natural language processing.<br><br>
 <a href="mailto:J.Chatterjee@hull.ac.uk"><i class="fa fa-envelope" style="font-size: 1.5em;"></i></a> 
 <a href="https://joyjitchatterjee.github.io/"><i class="fa fa-home" style="font-size: 1.5em;"></i></a>
