--- a/publications.html
+++ b/publications.html
@@ -101,6 +101,44 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
+							<h3>How Multimodal Data Can Enable Scalable and Trustworthy AI in Factories of The Future.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i><a href="index.html#team">J. Chatterjee</a>, R. Shankaran and <i class="fa fa-user"></i><a href="index.html#team">N. Dethlefs</a>
+								</li>
+								<li>	
+								<a href="v"><i class="fa fa-link"></i></a>Link</li>								
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+Manufacturers have increasingly turned to Artificial Intelligence (AI) to address specific problems in factories e.g. predictive maintenance, improving product quality etc. Implementing these in silos can miss critical interdependencies during root cause analysis and the interplay between various data sources across broader manufacturing operations. We provide a perspective on a holistic data model that harmonises data generated during production processes and across the supply chain enabling data-driven decisions to drive productivity, optimisation, and sustainability. Our approach is based on Overall Equipment Effectiveness (OEE) that focuses on predictive maintenance to increase availability, Continued Process Verification (CPV) and predictive stability to improve quality, and real-time insights, thereby optimising performance. The proposed multimodal model can help enhance productivity and reduce waste and rework, lending itself to sustainability imperatives. Similarly, Cost to Serve analysis, which targets inefficiencies in the distribution network and transportation, helps facilitate a reduction in costs and minimisation of carbon footprint in the supply chain.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2024 Technical Report.</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>	
+									<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>								
+							</div>
+						</div>
+						<!-- blog tags -->
+
+
+					<!-- publication entry -->
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
 							<h3>Measuring AI Fairness in a Continuum Maintaining Nuances: A Robustness Case Study.</h3>
 							<ul class="blog-meta">K. Paxton, 
 											<li>
