--- a/sustainability.html
+++ b/sustainability.html
@@ -105,7 +105,7 @@
 									<i class="fa fa-user"></i><a href="index.html#team">J. Chatterjee</a>, R. Shankaran and <i class="fa fa-user"></i><a href="index.html#team">N. Dethlefs</a>
 								</li>
 								<li>	
-								<a href="v"><i class="fa fa-link"></i></a>Link</li>								
+								<a href="https://www.researchgate.net/publication/383952671_How_Multimodal_Data_Can_Enable_Scalable_and_Trustworthy_AI_in_Factories_of_The_Future"><i class="fa fa-link"></i></a>Link</li>								
 							</ul>
 							<ul class="blog-meta">
 								<abstract style="display:inline" ;>
