--- a/nlp.html
+++ b/nlp.html
@@ -97,6 +97,57 @@
 
 
 					<!-- publication entry -->
+									
+
+						<div class="blog-content">
+							<h3>SafeLLM: Domain-Specific Safety Monitoring for Large language Models: A Case Study for Offshore Wind Maintenance.</h3>
+							<ul class="blog-meta">
+											<li>C. Walker, 
+									<i class="fa fa-user"></i><a href="index.html#team">C. Rothon, </a> <i class="fa fa-user"></i><a href="index.html#team">K. Aslansefat</a>, Y. Papadopoulos 
+									and <i class="fa fa-user"></i><a href="index.html#team">N. Dethlefs </a>
+								</li>
+								<li>	
+							<a href="https://arxiv.org/pdf/2410.10852"><i class="fa fa-link"></i></a>Link</li>
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+The Offshore Wind (OSW) industry is experiencing significant expansion, resulting in increased
+Operations & Maintenance (O&M) costs. Intelligent alarm systems offer the prospect of swift
+detection of component failures and process anomalies, enabling timely and precise interventions that
+could yield reductions in resource expenditure, as well as scheduled and unscheduled downtime. This
+paper introduces an innovative approach to tackle this challenge by capitalising on Large Language
+Models (LLMs). We present a specialised conversational agent that incorporates statistical techniques
+to calculate distances between sentences for the detection and filtering of hallucinations and unsafe
+output. This potentially enables improved interpretation of alarm sequences and the generation
+of safer repair action recommendations by the agent. Preliminary findings are presented with the
+approach applied to ChatGPT-4 generated test sentences. The limitation of using ChatGPT-4 and
+the potential for enhancement of this agent through re-training with specialised OSW datasets are
+discussed.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2024 Preprint.</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>	
+									<a href="nlp.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>								
+							</div>
+						</div>
+						<!-- blog tags -->
+
+
+					<!-- publication entry -->
+
+					<!-- publication entry -->
 
 						<div class="blog-content">
 							<h3>Understanding Slang with LLMs: Modelling Cross-Cultural Nuances through Paraphrasing.</h3>
