--- a/index.html
+++ b/index.html
@@ -982,6 +982,29 @@ Deep learning, computer vision
 				
 <div class="row">
 				<!-- blog -->		
+
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/bda-xmas24.png" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><a href="index.html#team">BDA</a></li>
+								<li><i class="fa fa-clock-o"></i>Dec 2024</li>
+							</ul>
+							<h3>BDA Xmas workshop 2024 </h3>
+						<p>Almost time to say good-bye to 2024. We can't wait for our next 
+						and final <a href="publications/bda24-flyer.pdf">BDA Xmas research workshop</a>.
+						Some of us will start a new adventure at Loughborough University in 2025, but 
+						all of us will keep working together. 🎄 🎁 🎅 🌟 ❄️ 🔔 👼 🍪 ⛄
+							 </p>
+						</div>
+					</div>
+				</div>
+
+				<!-- blog -->	
 				
 				<!-- blog -->
 	<div class="col-md-4">
