--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <div class="col-md-8">		
 			
 
-<p>Welcome to BDA's home! After several enjoyable years at Hull, we have moved on to new pastures at Loughborough University. You can find us at <a href="https://www.ldr-lboro.github.io">our new LDR Lboro home</a>.</p> 	
+<p>Welcome to BDA's home! After several enjoyable years at Hull, we have moved on to new pastures at Loughborough University. You can find us at <a href="https://ldr-lboro.github.io/">our new LDR Lboro home</a>.</p> 	
 
 
 </div>
